# mean

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: dumb.h  main.c
test/: test.c
